# pm2hw

./: .gitignore  CONTRIBUTING.md  README.md  build_hooks.py  latest.json  main.py  pyproject.toml  requirements.txt
pm2hw/: __init__.py  __main__.py  base.py  config.py  dittomini.py  exceptions.py  logger.py  pokecard.py  pokeusb.py  tr_dittomini.py  tr_pokecard.py
pm2hw/carts/: __init__.py  base.py  base_sst.py  dittomini.py  pokecard.py
pm2hw/gui/: __init__.py  __main__.py  i18n.py  resources.py  util.py
pm2hw/gui/components/: __init__.py  gamelist.py  help.py  library.py  linker.py  preferences.py  protocol.py  status.py
pm2hw/gui/themes/: __init__.py  base.py  colorized.py  dark.py  light.py  solarized.py
pm2hw/gui/widgets/: __init__.py  dialog.py  menu.py  richtext.py  richtext.pyi  scrollframe.py  scrollframe.pyi
pm2hw/info/games/: __init__.py  base.py  gcn_pchannel.py  pm_breeder.py  pm_lunch.py  pm_party.py  pm_pichu.py  pm_pinball.py  pm_puzzle.py  pm_puzzle2.py  pm_race.py  pm_tetris.py  pm_togepi.py  pm_zanycards.py
pm2hw/linkers/: __init__.py  base.py  base_ftdi.py  dittomini.py  pokecard.py
pm2hw/locales/: __init__.py
pm2hw/locales/en/LC_MESSAGES/: pm2hw.gui.po  pm2hw.po
pm2hw/locales/en/help/: basics.md  dumping.md  flashing.md  game.md  gui.md  linker.md  reference.md  welcome.md
pm2hw/locales/es/LC_MESSAGES/: pm2hw.po
pm2hw/locales/ja/LC_MESSAGES/: pm2hw.po
pm2hw_icons/: __init__.py
