[project]
name = "pm2hw"
# Also update in pm2hw\__init__.py
version = "0.0.7"
description = "Utility to read and write to all Pokemon mini hardware"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Pokemon mini", "flasher", "linker", "flash cart"]
dependencies = [
	"appdirs",
	"ftd2xx",
	"mistune",
	"pyusb",
]
dynamic = ["classifiers", "requires-python"]

[[project.authors]]
name = "Sapphire Becker"

[[project.maintainers]]
name = "Sapphire Becker"

[project.urls]
homepage = "https://github.com/logicplace/pm2hw"
repository = "https://github.com/logicplace/pm2hw"
documentation = "https://github.com/logicplace/pm2hw"

[project.scripts]
pm2hw = "pm2hw.__main__:main"
# TODO: pm2hw-tui

[project.gui-scripts]
pm2hw-gui = "pm2hw.gui.__main__:main"

[build-system]
requires = ["whey", "whey-mixin", "Babel"]
build-backend = "whey"

[tool.whey]
base-classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Natural Language :: English",
	"Natural Language :: Japanese",
	"Topic :: System :: Emulators",
]

additional-files = [
    "include resources/add_file.gif",
    "include resources/add_folder.gif",
    "include resources/remove_file.gif",
    "include LICENSE",
]

# TODO: only tested on CPython 3.9 for Windows so far
platforms = ["Windows", "macOS", "Linux"]
python-versions = ["3.7", "3.8", "3.9", "3.10"]
python-implementations = ["CPython", "PyPy"]

[tool.whey.builders]
sdist = "whey_mixin_sdist"
wheel = "whey_mixin_wheel"
binary = "whey_mixin_exe"

[tool.whey.mixin]
hooks = [
	"build_hooks:GettextMixin.build_messages"
]

[tool.whey.mixin.exe]
class = "build_hooks:PyInstallerBuilder"
